fixed overlap with image at certain resolutions

--- a/attraction.css
+++ b/attraction.css
@@ -42,6 +42,7 @@
   top: 26px;
 	width: 40%;
   margin-left: 10px;
+	margin-bottom: 10px;
   margin-right: 10px;
 border-style: solid;
 border-color: #5ea5f4;
